--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -7,9 +7,10 @@
 
 <ul>
     <th:block th:each="event : ${events}">
-        <li th:text="${event}"></li>
+        <li th:text="${event.name}"></li>
     </th:block>
 </ul>
 
 </body>
 </html>
+
